revsed css to fix scrollbar issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,8 @@ p {
 
 /*HEADER CSS*/
 #header {
-	padding: 30px;
+	padding-top: 30px;
+    padding-bottom: 30px;
 	margin: 0 auto;
 	width: 100%;
 	height: 100px;
